# leptos-tui

./: Cargo.toml  panic.txt
src/: components.rs  lib.rs  main.rs  surface.rs  widget.rs
src/components/: Center.rs  button.rs  dyn_child.rs  text.rs  text_macros.rs  unit.rs
