[package]
name = "leptos-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
derive_more = "0.99"
leptos_reactive = "0.2"
textwrap = "0.16"
tokio = { version = "1", features = ["sync"] }